Fix QuicAllowedPolicyIsFalse.QuicDisallowed flakiness introduced in r525444.

The problem was that SystemNetworkContextManager::DisableQuic() was calling NetworkService through the mojo interface when it was running in-process. However that would race with PostTask to the IO thread to check the actual URLRequestContext's data. Fix this by using a PostTask when network service is disabled.

Bug: 796936
Change-Id: I30b6b9ba1e1fb7825198df899154f59e83c671f6
Reviewed-on: https://chromium-review.googlesource.com/840260
Reviewed-by: Yuzhu Shen <yzshen@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525743}
Former-commit-id: d6735360825c34fa3bfb541aa35d01368049b13c