chrome/browser/policy/policy_network_browsertest.cc
@@ -185,13 +185,7 @@ class QuicAllowedPolicyIsFalse: public QuicAllowedPolicyTestBase {
   DISALLOW_COPY_AND_ASSIGN(QuicAllowedPolicyIsFalse);
 };
 
-// Fails on Linux - crbug.com/796936
-#if defined(OS_LINUX)
-#define MAYBE_QuicDisallowed DISABLED_QuicDisallowed
-#else
-#define MAYBE_QuicDisallowed QuicDisallowed
-#endif
-IN_PROC_BROWSER_TEST_F(QuicAllowedPolicyIsFalse, MAYBE_QuicDisallowed) {
+IN_PROC_BROWSER_TEST_F(QuicAllowedPolicyIsFalse, QuicDisallowed) {
   EXPECT_FALSE(IsQuicEnabledForSystem());
   EXPECT_FALSE(IsQuicEnabled(safe_browsing_service_request_context()));
   EXPECT_FALSE(IsQuicEnabled(browser()->profile()));
